[package]
name = "dal"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["json", "macros"] }
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
http = "1.3.1"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
rustls = { version = "0.23.31", features = ["ring"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twilight-http = "0.16.0"
twilight-model = "0.16.0"
url = "2.5.7"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
